[project]
name = "langchain-introduction-dmi"
version = "0.1.0"
description = ""
authors = [
    {name = "Michele Ferro"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "marimo (>=0.13.11,<0.14.0)",
    "wikipedia (>=1.4.0,<2.0.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "langchain-community (>=0.3.24,<0.4.0)",
    "langchain-mistralai (>=0.2.10,<0.3.0)",
    "langchain-openai (>=0.3.17,<0.4.0)",
    "langgraph (>=0.4.5,<0.5.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.marimo.runtime]
dotenv = [".env"]

[tool.marimo.save]
autosave = "after_delay"
autosave_delay = 1000
